--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,10 @@ dependencies:
   json_serializable: ^6.7.1
   intl: ^0.19.0
   webview_flutter: ^4.7.0
-  
+  drift: ^2.17.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.0
+  path: ^1.9.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -40,6 +43,8 @@ dev_dependencies:
   mockito: ^5.4.4
   build_runner: ^2.4.9
   mobx_codegen: ^2.6.1
+  drift_dev: ^2.17.0
+
 
 
 # The following section is specific to Flutter packages.
