--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dev_dependencies:
   build_runner: ^2.4.9
   mobx_codegen: ^2.6.1
   drift_dev: ^2.17.0
-
+  connectivity_plus: ^6.0.3
 
 
 # The following section is specific to Flutter packages.
